tests/neg/simple/01-error.ts

throw new Error(2);
